...
        android:layout_centerInParent="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:layout="@layout/favorite_item">

        <ImageView
            android:id="@+id/whiteLauncherButton"
            android:layout_width="@dimen/launcher_button_width"
            android:layout_height="@dimen/bar_height"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerInParent="true"
            android:contentDescription="@string/main_kiss"
...
            android:tag="showMenu"
            android:tint="@color/zenlauncher"
            android:visibility="visible" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/embeddedFavoritesBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:layout="@layout/favorite_item" />

...
