...
    android:paddingLeft="@dimen/result_margin_left"
    android:paddingRight="@dimen/result_margin_right"
    android:paddingStart="@dimen/result_margin_left"
    android:paddingTop="@dimen/result_margin_top">

    <ImageView
        android:id="@+id/item_setting_icon"
        android:layout_width="?attr/resultIconSize"
        android:layout_height="?attr/resultIconSize"
        android:layout_marginBottom="@dimen/icon_margin_bottom"
        android:layout_marginEnd="@dimen/icon_margin_right"
        android:layout_marginLeft="@dimen/icon_margin_left"
        android:layout_marginRight="@dimen/icon_margin_right"
...
        android:shadowDy="2"
        android:shadowRadius="?attr/textShadowRadius"
        android:text="@string/settings_prefix"
        android:textColor="?android:attr/textColorSecondary" />

    <TextView
        android:id="@+id/item_setting_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingBottom="2dp"
        android:paddingRight="2dp"
...
