...
        android:layout_toEndOf="@+id/item_shortcut_icon"
        android:layout_toRightOf="@+id/item_shortcut_icon"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/item_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingBottom="3dp"
            android:shadowColor="?attr/resultShadowColor"
...
